<resources>
    <string name="app_name">MOV</string>
    <string name="ob_button_skip">Lewati Perkenalan</string>
    <string name="ob_button_next">Lanjutkan</string>
    <string name="ob1_text1">Now Playing</string>
    <string name="ob1_text2">Lebih mudah untuk mengetahui \nfilm yang sedang tampil</string>
    <string name="ob2_text1">Pre Sale</string>
    <string name="ob2_text2">Tidak khawatir ketinggalan \nupdate film terbaru</string>
    <string name="ob3_text1">Cashless</string>
    <string name="ob3_text2">Gunakan e-wallet untuk \ntransaksi tiket nonton</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Nama</string>
    <string name="email_address">Email Address</string>
    <string name="upload_nanti">Upload Nanti</string>
    <string name="photo">Photo</string>
    <string name="simpan_dan_lanjutkan">SImpan dan Lanjutkan</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="now_playing">Now Playing</string>
    <string name="storyboard">Storyboard</string>
    <string name="whos_played">Who’s Played</string>
    <string name="pilih_bangku">Pilih Bangku</string>
    <string name="layar_bioskop">Layar Bioskop</string>
    <string name="selected">Selected</string>
    <string name="empety">Empety</string>
    <string name="booked">Booked</string>
    <string name="beli_tiket">Beli Tiket</string>
    <string name="checkout">Checkout</string>
    <string name="bayar_sekarang">Bayar Sekarang</string>
    <string name="batalkan">Batalkan</string>
    <string name="when">When</string>
    <string name="datetime">Date Time</string>
    <string name="cinema">Cinema</string>
    <string name="ewallet">E-Wallet</string>
    <string name="totalbalance">Total Balence</string>
    <string name="simpan_data">Simpan Data</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_wallet">My Wallet</string>
    <string name="history">History</string>
    <string name="mulai">Mulai</string>
    <string name="masuk_akun">Masuk Akun</string>
    <string name="daftar_akun">Daftar Akun</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="happy_watch">Happy Watching!</string>
    <string name="home">Home</string>
    <string name="lihat_tiket">Lihat Tiket</string>
    <string name="top_up_saldo">TOP UP SALDO</string>
    <string name="e_wallet_telah_berhasil_nuntuk_diperbarui">E-Wallet telah berhasil\nuntuk diperbarui</string>
    <string name="you_got_it">You got it!</string>
    <string name="idr_10_000">IDR\n10.000</string>
    <string name="idr_20_000">IDR\n20.000</string>
    <string name="idr_30_000">IDR\n30.000</string>
    <string name="idr_40_000">IDR\n40.000</string>
    <string name="idr_50_000">IDR\n50.000</string>
    <string name="idr_60_000">IDR\n60.000</string>
    <string name="lihat_wallet">Lihat Wallet</string>
</resources>
